# reminder

./: .gitignore  README.md
.github/workflows/: build-multiplatform.yml  main.yml
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: bundle.css  bundle.js  bundle.js.map  package-lock.json  package.json  rollup.config.js  tailwind.config.js
frontend/public/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  index.html
frontend/src/: App.svelte  Habit.svelte  main.js  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
website/src/components/: Nav.svelte
