[package]
name = "habitreminder"
version = "0.1.0"
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "1.4.5", features=["sqlite"] }
eyre = "0.6.1"
sqlx = "0.4.0-beta.1"
# dotenv = "0.15.0"