[package]
authors = ["Jeremy Arde"]
build = "src/build.rs"
default-run = "habitreminder"
description = "habitreminder"
edition = "2018"
license = ""
name = "habitreminder"
repository = ""
version = "0.2.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "0.9", features = ["all-api"]}

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = ["tauri/embedded-server"]
no-server = ["tauri/no-server"]

[[bin]]
name = "habitreminder"
path = "src/main.rs"
